2005-06-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/unicode/Blocks-4.0.0.txt:
	New block listings for Unicode 4.0.0.
	* java/lang/Character.java:
	Added new fields for 1.5, both in Character and UnicodeBlock.
	(UnicodeBlock.of(int)): Implemented.
	(UnicodeBlock.forName(String)): Implemented.
	* java/lang/annotation/ElementType.java:
	Corrected serial UID.
	* java/lang/annotation/RetentionPolicy.java:
	Likewise.
	* scripts/unicode-blocks.pl
	Updated to handle Unicode 4.0.0.
	
2005-06-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Class.java:
	(internalGetClasses()): Use collections with type parameters.
	(internalGetFields()): Likewise.
	(internalGetMethods()): Likewise.
	(getSuperclass()): Changed to new return type.
	(asSubclass(Class<U>)): Documented.
	(getEnumConstants()): Calls VMClass.
	(getAnnotation(Class<?>)): Implemented.
	(getAnnotations()): Implemented.
	(getCanonicalName()): Implemented.
	(getDeclaredAnnotations()): Implemented.
	(getEnclosingClass()): Implemented.
	(getEnclosingConstructor()): Implemented.
	(getEnclosingMethod()): Implemented.
	(getGenericInterfaces()): Implemented.
	(getGenericSuperclass()): Implemented.
	(getTypeParameters()): Implemented.
	(isAnnotationPresent(Class<?>)): Implemented.
	(isAnonymousClass()): Implemented.
	(isLocalClass()): Implemented.
	(isMemberClass()): Implemented.
	* java/lang/Package.java:
	(getAnnotation(Class<?>)): Implemented.
	(getAnnotations()): Implemented.
	(getDeclaredAnnotations()): Implemented.
	(isAnnotationPresent(Class<?>)): Implemented.
	* java/lang/annotation/AnnotationTypeMismatchException.java:
	Added serial version UID.
	* java/lang/annotation/ElementType.java: Likewise.
	* java/lang/annotation/RetentionPolicy.java: Likewise.
	* java/lang/reflect/AnnotatedElement.java: Documented.
	* java/lang/reflect/Modifier.java:
	(toString(int)): Switched to using StringBuilder.
	(toString(int,StringBuilder)): Likewise.
	* vm/reference/java/lang/VMClass.java: